# backend/routes/contacts.js
@@ -1,20 +1,16 @@
 const express = require('express');
-
-const controller = require("../controllers/contacts.js")
-
 const router = express.Router();
 
+const contactsController = require('../controllers/contacts');
 
-router.get ('/' , controller.getAllContacts);
+router.get('/', contactsController.getAllContacts);
 
+router.get('/:id', contactsController.getSingle);
 
-router.get (`/:id` , controller.getSingle);
+router.post('/', contactsController.createNew);
 
-router.post('/', controller.createNew);
+router.put('/:id', contactsController.updateCont);
 
-router.put('/:id', controller.updateCont);
-router.delete('/:id', controller.delCont);
-
+router.delete('/:id', contactsController.delCont);
 
 module.exports = router;
-
