# backend/routes/index.js
@@ -1,9 +1,13 @@
 const express = require('express');
 const router = express.Router();
 
-//Undefined routes
+router.use('/', require('./swagger'));
+
+router.use('/contacts', require('./contacts') );
+
 router.get('*', function (req,res) {
   res.send('Undefined route')
 })
+
 
 module.exports = router;
